- Fixed bug #52931 (strripos not overloaded with function overloading enabled)